WebAPI_Pure/App/css/printStyle.css
body {
    margin: 0;
    padding: 0;
}

.navbar,button,footer,a,legend {
    display: none;
}

p {
    font-size: 14pt;
}

span {
    font-size: 14pt;
}

.break {
    page-break-after: always;
    position: relative;
    border: 1px solid transparent;
}

.break:nth-last-child(2) {
    page-break-after: avoid;
    position: relative;
    border: none;
}

.rt-onlyForPrint {
    display: block;
}
.rt-hideForPrint {
    display: none;
}

.print {
    position: relative;
}

.userInfo, p, span {
    font-size: 9pt;
    margin: 0;
    padding: 0;
}
.userMsg {
    margin-top: 12em;
}

.distDeliv {
    position: absolute;
    right: 0;
    top: 0;
}
.distDelivTwo {
    font-size: 9pt;
}

.userInfo {
    position: absolute;
    right: 13.8em;
    top: 5.5em;
}

.message {
    width: 40%;
    height: 61em;
    position: absolute;
    left: 0;
    top: 7em;
    overflow: hidden;
    padding: 0 .25em;
    margin: 0;
    /*border-right: 1px solid black;*/
    /*border: 1px solid black;*/
}

.message,p {
    display: block;
    white-space: pre-line;
    margin: 0;
    padding: 0;
}

.userFlyers {
    position: absolute;
    top: 17em;
    width: 60%;
    height: 43em;
    overflow: hidden;
    padding: 0 2.5em 0 7.5em;
    /*border: 1px solid black;*/
}
.userFlyers,p  {
    font-size: 12pt;
}

.flyersFirst {
    left: 18.15em;
}

.flyersMiddle {
    /*left: 15.20em;*/
    right: 0;
}

.flyersRight {
    right: 0;
}

.productHeader {
    position: absolute;
    top: 15em;
    left: 28em;
}

